<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_authorize_external_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="59dp"
                android:ems="10"
                android:hint="External ID"
                android:inputType="textPersonName"
                android:layout_below="@+id/switch_auth_capt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/et_authorize_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_authorize_external_id"
                android:ems="10"
                android:hint="Preço"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_authorize_item_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView7"
                android:ems="10"
                android:hint="Código item"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_cancel_payment_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_authorize_item_code"
                android:ems="10"
                android:hint="Nome item"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_authorize_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_cancel_payment_id"
                android:ems="10"
                android:hint="Quantidade"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_authorize_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_authorize_item_quantity"
                android:ems="10"
                android:hint="Preço item"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_authorize_price"
                android:layout_marginTop="9dp"
                android:text="Item:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_authorize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Authorizar/Capturar"
                android:layout_below="@+id/et_authorize_item_price"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Switch
                android:id="@+id/switch_auth_capt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:showText="true"
                android:splitTrack="true"
                android:textOff=" "
                android:textOn=" "
                tools:checked="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/switch_auth_capt"
                android:layout_alignBottom="@+id/switch_auth_capt"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:layout_toLeftOf="@+id/switch_auth_capt"
                android:layout_toStartOf="@+id/switch_auth_capt"
                android:text="Autorizar" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView8"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_toEndOf="@+id/switch_auth_capt"
                android:layout_toRightOf="@+id/switch_auth_capt"
                android:text="Capturar" />

            <Button
                android:id="@+id/bt_authorization_cancel_refund"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bt_authorize"
                android:text="Cancelar/Estornar"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/spinner_loading_authorize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_authorize_item_quantity"
                android:layout_centerHorizontal="true"
                tools:visibility="invisible" />

            <EditText
                android:id="@+id/et_authorize_payment_method_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/switch_auth_capt"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="Payment Method ID"
                android:inputType="textPersonName" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>