...
    <string name="app_name">The God Father App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_connection_settings">Conf. Conexão</string>
    <string name="action_customer_settings">Cust. Conexão</string>

    <string name="tittle_authorize_capture">Autorizar/Capturar</string>
    <string name="tittle_buy_plan">Ass. Plano</string>
    <string name="tittle_cancel_refund">Cancelar/Estornar</string>
    <string name="tittle_settings">Configuração</string>
    <string name="msg_change_customer">Colocar esse cliente como principal?</string>
    <string name="msg_add_customer">Informe o customer nas configurações.</string>
    <string name="msg_status_returned">Status retornado: </string>
...
