...
                    android:layout_alignStart="@+id/textView3"
                    android:layout_marginTop="9dp"
                    android:text="Customer principal:" />
            </RelativeLayout>

            <ListView
                android:id="@+id/layout_list_customer"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="300dp"
                tools:ignore="NestedScrolling"></ListView>

        </FrameLayout>
...
